syntax = "proto3";
option java_multiple_files = true;
package org.grpc;

import "google/api/annotations.proto";

message GrpcRequest {
    string value = 1;
}

message GrpcResponse {
    string greeting = 1;
}

service GrpcService {
    rpc sendRpcRequest(GrpcRequest) returns (GrpcResponse) {
            option (google.api.http) = {
                get: "/"
            };
    };
}
